[package]
name = "tiltr"
version = "0.2.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
btleplug = "0.8"
serde = {version="1", features=["derive"]}
serde_json = "1"
clap = "2"
anyhow = "1"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
